--- a/UI/ColorVision.Solution/Properties/Resources.fr.resx
+++ b/UI/ColorVision.Solution/Properties/Resources.fr.resx
@@ -333,4 +333,13 @@
   <data name="NoAccountYet" xml:space="preserve">
     <value>Vous n'avez pas encore de compte ?</value>
   </data>
+  <data name="UserId" xml:space="preserve">
+    <value>ID de l'utilisateur</value>
+  </data>
+  <data name="PermissionManagement" xml:space="preserve">
+    <value>Gestion des accès</value>
+  </data>
+  <data name="RoleList" xml:space="preserve">
+    <value>Liste des personnages</value>
+  </data>
 </root>
