--- a/UI/ColorVision.UI/Properties/Resources.resx
+++ b/UI/ColorVision.UI/Properties/Resources.resx
@@ -526,4 +526,7 @@
   <data name="PropertyEditorWindow" xml:space="preserve">
     <value>属性编辑器窗口</value>
   </data>
+  <data name="Edit" xml:space="preserve">
+    <value>编辑</value>
+  </data>
 </root>
