--- a/ColorVision/Properties/Resources.ja.resx
+++ b/ColorVision/Properties/Resources.ja.resx
@@ -291,4 +291,10 @@
   <data name="FullScreen" xml:space="preserve">
     <value>全画面表示</value>
   </data>
+  <data name="TerminateUnresponsiveProcess" xml:space="preserve">
+    <value>応答しないプロセスを終了する</value>
+  </data>
+  <data name="ClickYesToUpdateNow" xml:space="preserve">
+    <value>今すぐ更新するには「はい」をクリックし、このバージョンをスキップするには「いいえ」をクリックし、後で通知するには「キャンセル」をクリックします。</value>
+  </data>
 </root>
