--- a/ColorVision/Properties/Resources.resx
+++ b/ColorVision/Properties/Resources.resx
@@ -291,4 +291,10 @@
   <data name="FullScreen" xml:space="preserve">
     <value>全屏</value>
   </data>
+  <data name="TerminateUnresponsiveProcess" xml:space="preserve">
+    <value>终止未响应的进程</value>
+  </data>
+  <data name="ClickYesToUpdateNow" xml:space="preserve">
+    <value>点击是立即更新，点击否跳过该版本，点击取消稍后提醒</value>
+  </data>
 </root>
