--- a/ColorVision/Properties/Resources.ko.resx
+++ b/ColorVision/Properties/Resources.ko.resx
@@ -297,4 +297,7 @@
   <data name="ClickYesToUpdateNow" xml:space="preserve">
     <value>지금 업데이트하려면 '예'를 클릭하고, 이번 버전을 건너뛰려면 '아니요'를 클릭하고, 나중에 알림을 받으려면 '취소'를 클릭하세요.</value>
   </data>
+  <data name="CheckPluginUpdates" xml:space="preserve">
+    <value>플러그인 업데이트 확인</value>
+  </data>
 </root>
