--- a/UI/ColorVision.UI/Properties/Resources.en.resx
+++ b/UI/ColorVision.UI/Properties/Resources.en.resx
@@ -487,4 +487,7 @@
   <data name="Edit" xml:space="preserve">
     <value>Edit</value>
   </data>
+  <data name="Theme" xml:space="preserve">
+    <value>Theme</value>
+  </data>
 </root>
