--- a/Engine/ColorVision.Engine/Properties/Resources.ko.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.ko.resx
@@ -2628,4 +2628,19 @@
   <data name="InternalTools" xml:space="preserve">
     <value>내장 도구</value>
   </data>
+  <data name="ThirdPartyApps" xml:space="preserve">
+    <value>타사 애플리케이션 관리</value>
+  </data>
+  <data name="NotInstalled" xml:space="preserve">
+    <value>설치되지 않음</value>
+  </data>
+  <data name="OpenDirectory" xml:space="preserve">
+    <value>디렉토리 열기</value>
+  </data>
+  <data name="PortableTools" xml:space="preserve">
+    <value>휴대용 도구</value>
+  </data>
+  <data name="InstallTools" xml:space="preserve">
+    <value>설치 도구</value>
+  </data>
 </root>
