--- a/Engine/ColorVision.Engine/Properties/Resources.fr.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.fr.resx
@@ -2628,4 +2628,19 @@
   <data name="InternalTools" xml:space="preserve">
     <value>Outils internes</value>
   </data>
+  <data name="ThirdPartyApps" xml:space="preserve">
+    <value>Gestion des applications tierces</value>
+  </data>
+  <data name="NotInstalled" xml:space="preserve">
+    <value>Non installé</value>
+  </data>
+  <data name="OpenDirectory" xml:space="preserve">
+    <value>Ouvrir le répertoire</value>
+  </data>
+  <data name="PortableTools" xml:space="preserve">
+    <value>outils portables</value>
+  </data>
+  <data name="InstallTools" xml:space="preserve">
+    <value>Outils d'installation</value>
+  </data>
 </root>
