--- a/Engine/ColorVision.Engine/Properties/Resources.ja.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.ja.resx
@@ -2628,4 +2628,19 @@
   <data name="InternalTools" xml:space="preserve">
     <value>内蔵ツール</value>
   </data>
+  <data name="ThirdPartyApps" xml:space="preserve">
+    <value>サードパーティ製アプリケーション管理</value>
+  </data>
+  <data name="NotInstalled" xml:space="preserve">
+    <value>インストールされていません</value>
+  </data>
+  <data name="OpenDirectory" xml:space="preserve">
+    <value>ディレクトリを開く</value>
+  </data>
+  <data name="PortableTools" xml:space="preserve">
+    <value>ポータブルツール</value>
+  </data>
+  <data name="InstallTools" xml:space="preserve">
+    <value>インストールツール</value>
+  </data>
 </root>
