--- a/Engine/ColorVision.Engine/Properties/Resources.ru.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.ru.resx
@@ -2628,4 +2628,19 @@
   <data name="InternalTools" xml:space="preserve">
     <value>Встроенные инструменты</value>
   </data>
+  <data name="ThirdPartyApps" xml:space="preserve">
+    <value>Управление сторонними приложениями</value>
+  </data>
+  <data name="NotInstalled" xml:space="preserve">
+    <value>Не установлено</value>
+  </data>
+  <data name="OpenDirectory" xml:space="preserve">
+    <value>Открыть каталог</value>
+  </data>
+  <data name="PortableTools" xml:space="preserve">
+    <value>Портативные инструменты</value>
+  </data>
+  <data name="InstallTools" xml:space="preserve">
+    <value>Инструменты для установки</value>
+  </data>
 </root>
