--- a/Engine/ColorVision.Engine/Properties/Resources.zh-Hant.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.zh-Hant.resx
@@ -2628,4 +2628,19 @@
   <data name="InternalTools" xml:space="preserve">
     <value>內建工具</value>
   </data>
+  <data name="ThirdPartyApps" xml:space="preserve">
+    <value>第三方應用管理</value>
+  </data>
+  <data name="NotInstalled" xml:space="preserve">
+    <value>未安裝</value>
+  </data>
+  <data name="OpenDirectory" xml:space="preserve">
+    <value>開啟目錄</value>
+  </data>
+  <data name="PortableTools" xml:space="preserve">
+    <value>便攜工具</value>
+  </data>
+  <data name="InstallTools" xml:space="preserve">
+    <value>安裝工具</value>
+  </data>
 </root>
