--- a/UI/ColorVision.UI.Desktop/Properties/Resources.fr.resx
+++ b/UI/ColorVision.UI.Desktop/Properties/Resources.fr.resx
@@ -465,4 +465,16 @@
   <data name="Loading" xml:space="preserve">
     <value>charger</value>
   </data>
+  <data name="ThirdPartyApps" xml:space="preserve">
+    <value>Gestion des applications tierces</value>
+  </data>
+  <data name="Open" xml:space="preserve">
+    <value>Ouvrir</value>
+  </data>
+  <data name="OpenDirectory" xml:space="preserve">
+    <value>Ouvrir le répertoire</value>
+  </data>
+  <data name="SystemTools" xml:space="preserve">
+    <value>Outils système</value>
+  </data>
 </root>
