--- a/UI/ColorVision.UI.Desktop/Properties/Resources.ru.resx
+++ b/UI/ColorVision.UI.Desktop/Properties/Resources.ru.resx
@@ -465,4 +465,16 @@
   <data name="Loading" xml:space="preserve">
     <value>нагрузка</value>
   </data>
+  <data name="ThirdPartyApps" xml:space="preserve">
+    <value>Управление сторонними приложениями</value>
+  </data>
+  <data name="Open" xml:space="preserve">
+    <value>Открыть</value>
+  </data>
+  <data name="OpenDirectory" xml:space="preserve">
+    <value>Открыть каталог</value>
+  </data>
+  <data name="SystemTools" xml:space="preserve">
+    <value>Системные инструменты</value>
+  </data>
 </root>
