--- a/UI/ColorVision.UI.Desktop/Properties/Resources.zh-Hant.resx
+++ b/UI/ColorVision.UI.Desktop/Properties/Resources.zh-Hant.resx
@@ -465,4 +465,16 @@
   <data name="Loading" xml:space="preserve">
     <value>載入</value>
   </data>
+  <data name="ThirdPartyApps" xml:space="preserve">
+    <value>第三方應用管理</value>
+  </data>
+  <data name="Open" xml:space="preserve">
+    <value>打開</value>
+  </data>
+  <data name="OpenDirectory" xml:space="preserve">
+    <value>開啟目錄</value>
+  </data>
+  <data name="SystemTools" xml:space="preserve">
+    <value>系統工具</value>
+  </data>
 </root>
