--- a/UI/ColorVision.UI.Desktop/Properties/Resources.en.resx
+++ b/UI/ColorVision.UI.Desktop/Properties/Resources.en.resx
@@ -477,4 +477,7 @@
   <data name="SystemTools" xml:space="preserve">
     <value>System Tools</value>
   </data>
+  <data name="NotInstalled" xml:space="preserve">
+    <value>Not Installed</value>
+  </data>
 </root>
