--- a/UI/ColorVision.UI.Desktop/Properties/Resources.ko.resx
+++ b/UI/ColorVision.UI.Desktop/Properties/Resources.ko.resx
@@ -306,9 +306,6 @@
   <data name="OpenLogFolder" xml:space="preserve">
     <value>오픈로그폴더</value>
   </data>
-  <data name="OpenFolder" xml:space="preserve">
-    <value>폴더 열기</value>
-  </data>
   <data name="OpenContainingFolder" xml:space="preserve">
     <value>포함 폴더 열기</value>
   </data>
@@ -317,9 +314,6 @@
   </data>
   <data name="OnlineCronGenerator" xml:space="preserve">
     <value>온라인 Cron 표현식 생성기</value>
-  </data>
-  <data name="OK" xml:space="preserve">
-    <value>확인</value>
   </data>
   <data name="NoLocalLog4Output" xml:space="preserve">
     <value>로컬 log4 출력이 구성되지 않았습니다</value>
@@ -441,9 +435,6 @@
   <data name="CheckingForAdditionalProjects" xml:space="preserve">
     <value>추가 프로젝트 확인 중</value>
   </data>
-  <data name="Cancel" xml:space="preserve">
-    <value>취소</value>
-  </data>
   <data name="Bool2VisibilityConverterNotFound" xml:space="preserve">
     <value>bool2VisibilityConverter 리소스를 찾을 수 없습니다</value>
   </data>
@@ -479,5 +470,131 @@
   </data>
   <data name="NotInstalled" xml:space="preserve">
     <value>설치되지 않음</value>
+  </data>
+  <data name="Refresh" xml:space="preserve">
+    <value>새로 고치다</value>
+  </data>
+  <data name="Password" xml:space="preserve">
+    <value>비밀번호</value>
+  </data>
+  <data name="OpenFolder" xml:space="preserve">
+    <value>포함 폴더 열기</value>
+  </data>
+  <data name="OK" xml:space="preserve">
+    <value>확신하는</value>
+  </data>
+  <data name="Cancel" xml:space="preserve">
+    <value>취소</value>
+  </data>
+  <data name="DownloadManager" xml:space="preserve">
+    <value>다운로드 관리자</value>
+  </data>
+  <data name="AddDownload" xml:space="preserve">
+    <value>새로운 다운로드</value>
+  </data>
+  <data name="ClearRecords" xml:space="preserve">
+    <value>기록을 삭제하세요</value>
+  </data>
+  <data name="DeleteSelected" xml:space="preserve">
+    <value>선택한 항목 삭제</value>
+  </data>
+  <data name="SearchButton" xml:space="preserve">
+    <value>찾다</value>
+  </data>
+  <data name="OpenDownloadFolder" xml:space="preserve">
+    <value>다운로드 디렉토리를 엽니다.</value>
+  </data>
+  <data name="FileName" xml:space="preserve">
+    <value>파일 이름</value>
+  </data>
+  <data name="Progress" xml:space="preserve">
+    <value>일정</value>
+  </data>
+  <data name="StatusHeader" xml:space="preserve">
+    <value>상태</value>
+  </data>
+  <data name="Speed" xml:space="preserve">
+    <value>속도</value>
+  </data>
+  <data name="FileSize" xml:space="preserve">
+    <value>파일 크기</value>
+  </data>
+  <data name="CreateTimeHeader" xml:space="preserve">
+    <value>창조 시간</value>
+  </data>
+  <data name="OpenFile" xml:space="preserve">
+    <value>파일 열기</value>
+  </data>
+  <data name="CopyUrl" xml:space="preserve">
+    <value>다운로드 링크 복사</value>
+  </data>
+  <data name="RetryDownload" xml:space="preserve">
+    <value>다시 다운로드해 보세요</value>
+  </data>
+  <data name="CancelDownload" xml:space="preserve">
+    <value>다운로드 취소</value>
+  </data>
+  <data name="DeleteRecord" xml:space="preserve">
+    <value>레코드 삭제</value>
+  </data>
+  <data name="TotalRecords" xml:space="preserve">
+    <value>총 레코드 수:</value>
+  </data>
+  <data name="PageSize" xml:space="preserve">
+    <value>페이지당 가격:</value>
+  </data>
+  <data name="Page" xml:space="preserve">
+    <value>페이지</value>
+  </data>
+  <data name="DownloadUrl" xml:space="preserve">
+    <value>다운로드 링크:</value>
+  </data>
+  <data name="SaveDirectory" xml:space="preserve">
+    <value>디렉토리 저장:</value>
+  </data>
+  <data name="UserName" xml:space="preserve">
+    <value>사용자 이름:</value>
+  </data>
+  <data name="UrlRequired" xml:space="preserve">
+    <value>다운로드 링크를 입력해 주세요.</value>
+  </data>
+  <data name="ClearRecordsConfirm" xml:space="preserve">
+    <value>다운로드 기록을 모두 삭제하시겠습니까?</value>
+  </data>
+  <data name="Waiting" xml:space="preserve">
+    <value>대기 중</value>
+  </data>
+  <data name="Downloading" xml:space="preserve">
+    <value>다운로드 중</value>
+  </data>
+  <data name="Completed" xml:space="preserve">
+    <value>완전한</value>
+  </data>
+  <data name="Failed" xml:space="preserve">
+    <value>실패하다</value>
+  </data>
+  <data name="Paused" xml:space="preserve">
+    <value>정지된</value>
+  </data>
+  <data name="FileDeleted" xml:space="preserve">
+    <value>해당 파일이 삭제되었습니다.</value>
+  </data>
+  <data name="DownloadCompletedMessage" xml:space="preserve">
+    <value>파일 "{0}" 다운로드가 완료되었습니다.</value>
+  </data>
+  <data name="DownloadFailedMessage" xml:space="preserve">
+    <value>파일 "{0}" 다운로드 실패: {1}</value>
+  </data>
+  <data name="OpenFileQuestion" xml:space="preserve">
+    <value>파일을 열어보시겠습니까?</value>
+  </data>
+  <data name="DownloadSettings" xml:space="preserve">
+    <value>다운로드 설정</value>
+  </data>
+  <data name="AdvancedOptions" xml:space="preserve">
+    <value>고급 옵션</value>
+  </data>
+  <data name="UrlSeparatorHint" xml:space="preserve">
+    <value>여러 링크는 세미콜론(;)으로 구분됩니다.</value>
   </data>
 </root>
