--- a/UI/ColorVision.UI.Desktop/Properties/Resources.resx
+++ b/UI/ColorVision.UI.Desktop/Properties/Resources.resx
@@ -287,7 +287,7 @@
     <value>打开日志文件夹</value>
   </data>
   <data name="OpenFolder" xml:space="preserve">
-    <value>打开文件夹</value>
+    <value>打开所在文件夹</value>
   </data>
   <data name="OpenContainingFolder" xml:space="preserve">
     <value>打开所在文件夹</value>
@@ -459,5 +459,122 @@
   </data>
   <data name="NotInstalled" xml:space="preserve">
     <value>未安装</value>
+  </data>
+  <data name="DownloadManager" xml:space="preserve">
+    <value>下载管理器</value>
+  </data>
+  <data name="AddDownload" xml:space="preserve">
+    <value>新建下载</value>
+  </data>
+  <data name="ClearRecords" xml:space="preserve">
+    <value>清除记录</value>
+  </data>
+  <data name="DeleteSelected" xml:space="preserve">
+    <value>删除选中</value>
+  </data>
+  <data name="SearchButton" xml:space="preserve">
+    <value>搜索</value>
+  </data>
+  <data name="OpenDownloadFolder" xml:space="preserve">
+    <value>打开下载目录</value>
+  </data>
+  <data name="FileName" xml:space="preserve">
+    <value>文件名</value>
+  </data>
+  <data name="Progress" xml:space="preserve">
+    <value>进度</value>
+  </data>
+  <data name="StatusHeader" xml:space="preserve">
+    <value>状态</value>
+  </data>
+  <data name="Speed" xml:space="preserve">
+    <value>速度</value>
+  </data>
+  <data name="FileSize" xml:space="preserve">
+    <value>文件大小</value>
+  </data>
+  <data name="CreateTimeHeader" xml:space="preserve">
+    <value>创建时间</value>
+  </data>
+  <data name="OpenFile" xml:space="preserve">
+    <value>打开文件</value>
+  </data>
+  <data name="CopyUrl" xml:space="preserve">
+    <value>复制下载链接</value>
+  </data>
+  <data name="RetryDownload" xml:space="preserve">
+    <value>重试下载</value>
+  </data>
+  <data name="CancelDownload" xml:space="preserve">
+    <value>取消下载</value>
+  </data>
+  <data name="DeleteRecord" xml:space="preserve">
+    <value>删除记录</value>
+  </data>
+  <data name="TotalRecords" xml:space="preserve">
+    <value>总记录数:</value>
+  </data>
+  <data name="PageSize" xml:space="preserve">
+    <value>每页:</value>
+  </data>
+  <data name="Page" xml:space="preserve">
+    <value>页</value>
+  </data>
+  <data name="DownloadUrl" xml:space="preserve">
+    <value>下载链接:</value>
+  </data>
+  <data name="SaveDirectory" xml:space="preserve">
+    <value>保存目录:</value>
+  </data>
+  <data name="UserName" xml:space="preserve">
+    <value>用户名:</value>
+  </data>
+  <data name="UrlRequired" xml:space="preserve">
+    <value>请输入下载链接</value>
+  </data>
+  <data name="ClearRecordsConfirm" xml:space="preserve">
+    <value>确定要清除所有下载记录吗？</value>
+  </data>
+  <data name="Waiting" xml:space="preserve">
+    <value>等待中</value>
+  </data>
+  <data name="Downloading" xml:space="preserve">
+    <value>下载中</value>
+  </data>
+  <data name="Completed" xml:space="preserve">
+    <value>已完成</value>
+  </data>
+  <data name="Failed" xml:space="preserve">
+    <value>失败</value>
+  </data>
+  <data name="Paused" xml:space="preserve">
+    <value>已暂停</value>
+  </data>
+  <data name="FileDeleted" xml:space="preserve">
+    <value>文件已删除</value>
+  </data>
+  <data name="DownloadCompletedMessage" xml:space="preserve">
+    <value>文件 "{0}" 下载完成</value>
+  </data>
+  <data name="DownloadFailedMessage" xml:space="preserve">
+    <value>文件 "{0}" 下载失败: {1}</value>
+  </data>
+  <data name="OpenFileQuestion" xml:space="preserve">
+    <value>是否打开文件？</value>
+  </data>
+  <data name="DownloadSettings" xml:space="preserve">
+    <value>下载设置</value>
+  </data>
+  <data name="AdvancedOptions" xml:space="preserve">
+    <value>高级选项</value>
+  </data>
+  <data name="UrlSeparatorHint" xml:space="preserve">
+    <value>多个链接用 ; 分隔</value>
+  </data>
+  <data name="Refresh" xml:space="preserve">
+    <value>刷新</value>
+  </data>
+  <data name="Password" xml:space="preserve">
+    <value>密码</value>
   </data>
 </root>
